deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vav
  labels: {pod-security.kubernetes.io/enforce: restricted}
